--- a/apps/user-app/app/globals.css
+++ b/apps/user-app/app/globals.css
@@ -1,3 +1,15 @@
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+  body {
+    @apply bg-white;
+  }
+}
+/* styles/global.css */
+
+  
