--- a/apps/user-app/app/globals.css
+++ b/apps/user-app/app/globals.css
@@ -1,15 +1,12 @@
-
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-@layer base {
-  body {
-    @apply bg-white;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-/* styles/global.css */
 
-  
+
+
